src/common-editor.scss
/**
 * #.# Common SCSS
 *
 * Can include things like variables and mixins
 * that are used across the project.
*/

/* ------------------------------------------------------------------------------------------------*/

@import "styles/variables";

/* Gutenberg Reset CSS */
.block-editor-block-inspector {

	.uagb-inspector-tab {

		.components-notice.is-warning {
			margin-top: 20px;
			margin-bottom: 20px;
		}

		.components-panel__body {

			> .components-base-control {
				margin-bottom: $spectra-control-vertical-gap;

				.components-base-control,
				.components-base-control__field {
					padding-top: 0;
					margin-bottom: 0;
				}
			}

			> .components-base-control:last-child {
				margin-bottom: 0;
			}

			/* Gutenberg DatePicker CSS */
			.components-datetime {

				.components-datetime__buttons {
					margin: 10px 0 10px 0;

					/* Unset box-shadow */
					.components-button:focus:not(:disabled) {
						box-shadow: unset;
					}
				}
			}

			/* Gutenberg Toggle Help CSS*/
			.components-base-control__help {
				margin-top: 10px;
			}

			/* Add a border top and bottom of responsive condition */
			&:last-child {
				border-bottom: 1px solid #e0e0e0;
			}
		}
	}
}

/* Gutenberg Editor border hover */
.edit-post-visual-editor .editor-styles-wrapper > .block-editor-block-list__layout {

	.block-editor-block-list__block:hover::after,
	.block-editor-block-list__block:not([contenteditable]):focus::after {
		box-shadow: 0 0 0 1.5px $spectra-color-primary;
		border-radius: 2px;
	}


	.block-editor-block-list__block:not([contenteditable]):focus {
		z-index: 1;
	}

}

.block-editor-block-list__layout .block-editor-block-list__block.is-selected { // Added CSS for better clarity to the users to indicates which block is selected & being edited.
	box-shadow: 0 0 0 1.5px $spectra-color-primary;
	border-radius: 2px;
}

/* UAG Help Notice CSS*/
.uagb-inspector-tab .uag-control-help-notice {
	margin-top: 10px;
	font-size: 12px;
	font-style: normal;
	color: rgb(117, 117, 117);
}

/* UAG Control Label CSS*/
.uag-control-label,
.uagb-inspector-tab .components-base-control__label,
.uagb-inspector-tab .components-panel__body label,
.uagb-extention-tab label {
	color: $spectra-color-body;
	font-size: $spectra-font-size-label !important;
	line-height: $spectra-line-height-label !important;
	margin-bottom: $spectra-control-label-bottom-margin;
	text-transform: $spectra-text-transform-label !important;
	font-weight: $spectra-font-weight-label !important;
}

.uagb-inspector-tab label.components-toggle-control__label {
	margin-bottom: 0;
}

/* Editor panel sidebar - scrollbar design CSS start */

.interface-interface-skeleton__sidebar::-webkit-scrollbar {
	width: 5px;
}

.interface-interface-skeleton__sidebar::-webkit-scrollbar-thumb {
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
	border-radius: 100px;
}

/* Editor panel sidebar - scrollbar design CSS end */

/* Panel Body CSS*/
.uagb-inspector-tab,
[data-uagb-tab] {

	.components-panel__body-title .components-button {
		font-size: $spectra-font-size-button;
	}
}

/* GB Select Control CSS*/
.uagb-inspector-tab .components-select-control {
	height: auto;
}

/* Tabs Pabel CSS for .uagb-size-type-field-tabs START*/
.uagb-size-type-field-tabs .components-tab-panel__tabs {
	display: block;
	border-bottom: 0;
	text-align: right;
	padding-right: 28px;
	margin-right: 45px;
	margin-bottom: -20px;
	z-index: unset;

	button span.dashicon.dashicons {
		font-size: 15px;
	}

	button.active-tab svg,
	button.active-tab svg:focus {
		color: $spectra-color-primary;
	}
}

.uagb-size-type-field-tabs .components-tab-panel__tabs button svg,
.uagb-size-type-field-tabs .uag-responsive-label-wrap svg {
	width: auto;
	height: 10px;
}

.uagb-size-type-field-tabs .components-tab-panel__tabs button {
	border: 0;
	border-bottom: 0;
	padding: 4px;
	margin-bottom: 0;
	outline: 0;
	font-size: 8px;
	background: transparent;
	color: #999;
	display: inline-block;
	height: 16px;
	width: 22px;
	margin-right: 3px;
}

.uagb-size-type-field-tabs .components-tab-panel__tabs button.active-tab,
.uagb-size-type-field-tabs .components-tab-panel__tabs button.active-tab:focus {
	box-shadow: none;
	color: $spectra-color-primary;
	border-radius: 100%;
	padding: 0;
	margin: 0;
	line-height: 0;
}

.uagb-control__actions .uagb-size-type-field-tabs {
	margin: 0;
}

/* Tabs Pabel CSS for .uagb-size-type-field-tabs END*/

/* ------------------------------------------------------------------------------------------------*/

.uagb-inspect-tabs .components-tab-panel__tabs button {
	padding: 10px;
	background: transparent;
	color: #333;
	outline: none;
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 3px solid #eee;
	cursor: pointer;
	-webkit-transition: all 0.2s;
	-o-transition: all 0.2s;
	transition: all 0.2s;
}

hr.uagb-editor__separator {
	border-bottom: 1px solid #e2e4e7;
}

.uagb-inspect-tabs > .components-tab-panel__tabs button.active-tab,
.uagb-inspect-tabs > .components-tab-panel__tabs button:focus {
	border-bottom: 3px solid #333;
	outline: none;
	font-weight: 500;
}

.uagb-inspect-tab-title {
	margin-top: 20px;
}

.uagb-inspect-tabs-col-2 > .components-tab-panel__tabs button,
.uagb-inspect-tabs.uagb-inspect-tabs-col-2 > .components-tab-panel__tabs button {
	width: 50%;
}

.components-button-group .components-button.is-primary,
.components-button-group .components-button:focus,
.components-toolbar .components-button,
.components-toolbar .components-button::before {
	z-index: unset;
}

.uagb-inspect-tabs .components-tab-panel__tabs {
	margin-bottom: 15px;
}

.uagb-inspect-tabs-col-3 > .components-tab-panel__tabs button {
	width: 33.33%;
}

.uagb-settings-notice {
	color: #478a3b;
	background-color: #e5fce3;
	padding: 15px;
	border-left: 5px solid #c3f9c5;
	font-size: 12px;
	line-height: 1.5;
	text-align: left;
}

.uagb-note,
.components-base-control__help {
	color: #a4afb7;
	font-size: 12px;
	font-style: italic;
}
/* ... */

